--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,14 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
+
+mc_version=1.16.1
+forge_version=1.16.1-32.0.63
+version=0.0.2
+mcp_mapping=20200707-1.16.1
+
+title=Re:Skin
+modid=reskin
+package=com.sekwah.reskin
+vendor=Sekwah
