Setting up config and data

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ repositories {
     maven {
         url "https://minecraft.curseforge.com/api/maven/"
     }
+    maven {
+        url 'https://www.dogforce-games.com/maven/'
+    }
 }
 
 minecraft {
@@ -52,8 +55,6 @@ minecraft {
     accessTransformer = file('src/main/resources/META-INF/reskin_at.cfg')
 
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-
-    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
