--- a/src/main/resources/META-INF/reskin_at.cfg
+++ b/src/main/resources/META-INF/reskin_at.cfg
@@ -1,2 +1,2 @@
-public net.minecraft.client.entity.AbstractClientPlayer field_175157_a #playerInfo
-public net.minecraft.client.network.NetworkPlayerInfo field_187107_a #playerTextures
+public net.minecraft.client.entity.player.AbstractClientPlayerEntity field_175157_a #playerInfo
+public net.minecraft.client.network.play.NetworkPlayerInfo field_187107_a #playerTextures
