--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,7 @@
 modLoader="javafml"
 loaderVersion="[32,)"
 issueTrackerURL="https://github.com/sekwah41/Re-Skin/issues"
+license="All rights reserved"
 [[mods]] #mandatory
     modId="reskin"
     version="${file.jarVersion}"
