Added support for multiple 1.16

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -21,9 +21,10 @@ license="All rights reserved"
     ordering="NONE"
     side="BOTH"
 
+# https://maven.apache.org/enforcer/enforcer-rules/versionRanges.html
 [[dependencies.reskin]]
     modId="minecraft"
     mandatory=true
-    versionRange="[1.16.1]"
+    versionRange="[1.16,)"
     ordering="NONE"
     side="BOTH"
