--- a/build.gradle
+++ b/build.gradle
@@ -2,33 +2,32 @@ buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
         maven { url = "https://repo.spongepowered.org/maven" }
+        maven { url = "https://maven.sekwah.com" }
         maven {url "https://plugins.gradle.org/m2/"}
         // Only temporary
         jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-        classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
         classpath "com.wynprice.cursemaven:CurseMaven:2.1.1"
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: "java"
-apply plugin: "idea"
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-apply plugin: "org.spongepowered.mixin"
 apply plugin: "com.wynprice.cursemaven"
 
-version = project.version
+version = "${project.version}"
 group = project.package // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = project.modid
+archivesBaseName = project.archive
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         url 'https://dvs1.progwml6.com/files/maven'
@@ -36,18 +35,16 @@ repositories {
     maven {
         url "https://minecraft.curseforge.com/api/maven/"
     }
-    maven {
-        url 'https://www.dogforce-games.com/maven/'
-    }
 }
 
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
     // The mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   Snapshot are built nightly.
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: project.mcp_mapping
+    mappings channel: 'official', version: project.minecraft_version
 
     // This is for personal local tests i was doing ignore it ;)
     //mappings channel: 'snapshot', version: '20200706-unofficialtest-1.16.1'
@@ -69,7 +66,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                reskin {
                     source sourceSets.main
                 }
             }
@@ -86,7 +83,7 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             mods {
-                examplemod {
+                reskin {
                     source sourceSets.main
                 }
             }
@@ -102,20 +99,14 @@ minecraft {
             // Recommended logging level for the console
             property 'forge.logging.console.level', 'debug'
 
-            args '--mod', 'examplemod', '--all', '--output', file('src/generated/resources/')
+            args '--mod', 'reskin', '--all', '--output', file('src/generated/resources/')
 
             mods {
-                examplemod {
+                reskin {
                     source sourceSets.main
                 }
             }
         }
-    }
-}
-
-repositories {
-    maven {
-        url "http://repo.spongepowered.org/maven/"
     }
 }
 
@@ -132,10 +123,13 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:' + project.forge_version
+    minecraft 'net.minecraftforge:forge:' + "${project.minecraft_version}-${project.forge_version}"
 
-    // Just for dev testing
-    implementation "org.spongepowered:mixin:0.8-SNAPSHOT"
+    //compile "com.sekwah:SekCLib:${sekclib_version}:deobf"
+
+    // compile fg.deobf("curse.maven:neat:${project.neat_fileid}")
+
+    // compile fg.deobf("curse.maven:hwyla:${project.hwyla_fileid}")
 
     //include('org.ow2.asm:asm-debug-all:5.2')
 
@@ -153,13 +147,10 @@ dependencies {
 
 }
 
-mixin {
-    add sourceSets.main, "mixins.reskin.json"
-}
-
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
-
+    finalizedBy 'reobfJar'
+    classifier = 'universal'
     manifest {
         attributes([
                 "Specification-Title": project.modid,
