--- a/gradle.properties
+++ b/gradle.properties
@@ -3,11 +3,17 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-forge_version=1.16.4-35.0.2
-mcp_mapping=20201028-1.16.3
-version=1.4.0
+minecraft_version=1.16.5
+forge_version=36.0.48
+version=1.0.0b5
 
 title=Re:Skin
+archive=ReSkin
 modid=reskin
 package=com.sekwah.reskin
 vendor=Sekwah
+projectDir=
+
+sekclib_version=0.1.0
+neat_fileid=3182258
+hwyla_fileid=3033613
