--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 minecraft_version=1.16.5
 forge_version=36.0.48
-version=1.0.0b5
+version=1.3.2
 
 title=Re:Skin
 archive=ReSkin
@@ -15,5 +15,3 @@ vendor=Sekwah
 projectDir=
 
 sekclib_version=0.1.0
-neat_fileid=3182258
-hwyla_fileid=3033613
