--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,7 @@ apply plugin: "com.matthewprenger.cursegradle"
 version = "${project.version}"
 group = project.package // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = project.archive
-println('Git Branch' + System.getenv('GITHUB_REF'))
-def isReleaseBranch = System.getenv("BRANCH") == "release" || System.getenv("BRANCH") == "release-1.15" || System.getenv("BRANCH") == "release-1.16";
+def isReleaseBranch = System.getenv("BRANCH") == "refs/heads/release-forge-1.16";
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
@@ -216,7 +215,7 @@ curseforge {
         id = '342729'
         // TODO add code to reference this but also cut the latest change logs in for the files
         changelog = '''Note: All versions listed should be supported however we always compile against the latest listed.
-Changelog: https://github.com/sekwah41/Re-Skin/blob/changelog/CHANGELOG.md'''
+Changelog: https://github.com/sekwah41/Re-Skin/blob/forge-1.16.1-3/README.md'''
         changelogType = 'markdown'
         releaseType = 'beta'
         addGameVersion '1.16.1'
@@ -228,8 +227,8 @@ Changelog: https://github.com/sekwah41/Re-Skin/blob/changelog/CHANGELOG.md'''
         mainArtifact(jar){
 
         }
-        addArtifact sourcesJar
-        addArtifact deobfJar
-        addArtifact javadocJar
+        //addArtifact sourcesJar
+        //addArtifact deobfJar
+        //addArtifact javadocJar
     }
 }
