--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,9 +16,7 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
     - name: Publish to Curseforge (If release branch)
-      if: contains('
-        refs/heads/release
-      ', github.ref)
+      if: startsWith(github.ref, 'refs/heads/release')
       env:
         CURSE_API: ${{ secrets.CURSE_API }}
       run: ./gradlew curseforge
