Update changelog link

--- a/build.gradle
+++ b/build.gradle
@@ -213,7 +213,7 @@ curseforge {
     project {
         id = '342729'
         // TODO add code to reference this but also cut the latest change logs in for the files
-        changelog = '''https://github.com/sekwah41/Re-Skin/blob/release-forge-1.16/CHANGELOG.md'''
+        changelog = "https://github.com/sekwah41/Re-Skin/blob/${System.getenv('GITHUB_SHA')}/CHANGELOG.md"
         changelogType = 'markdown'
         releaseType = 'beta'
         addGameVersion '1.16.1'
