Updating gradle build scripts

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,5 @@ package=com.sekwah.reskin
 vendor=Sekwah
 projectDir=
 
-sekclib_version=0.1.0
+github=https://github.com/sekwah41/Re-Skin
+curse_project_id=342729
