Update build things

--- a/build.gradle
+++ b/build.gradle
@@ -296,9 +296,8 @@ curseforge {
         mainArtifact(jar){
 
         }
-        addArtifact sourcesJar
+        addArtifact srcJar
         addArtifact deobfJar
-        addArtifact javadocJar
     }
 }
 
