--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ version=1.3.2
 title=Re:Skin
 archive=ReSkin
 modid=reskin
-package=com.sekwah.reskin
+package=com.sekwah
 vendor=Sekwah
 projectDir=
 
