--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,12 +29,12 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
       - name: Upload to Discord (If dev branch)
-        if: startsWith(github.ref, 'refs/heads/dev/')
+        if: 'startsWith(github.ref, "refs/tags/") && endsWith(github.ref, "-[0-9]+")'
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: ./gradlew discordupload
       - name: Publish to Curseforge (If tagged)
-        if: startsWith(github.ref, 'refs/tags/')
+        if: 'startsWith(github.ref, "refs/tags/") && !endsWith(github.ref, "-[0-9]+")'
         env:
           CURSE_API: ${{ secrets.CURSE_API }}
         run: ./gradlew curseforge
