feat: Added /setmodel command & Reworked /setskin
BREAKING CHANGE: Specifically relating to if you have command blocks. targeting other entities with /setskin now is /setskin (url) (targets)

--- a/build.gradle
+++ b/build.gradle
@@ -338,7 +338,7 @@ task updateChangelogPreRelease(type: Exec) {
  * Just to stop having to manually tagging. Probably could do this easier but meh stops typos or other issues.
  */
 task tagRelease(type: Exec) {
-    commandLine 'cmd', '/c', 'npx standard-version@9.3.0 --prerelease -i docs/SNAPSHOT_CHANGELOG.md --skip.changelog --skip.bump'
+    commandLine 'cmd', '/c', 'npx standard-version@9.3.0 --prerelease beta -i docs/SNAPSHOT_CHANGELOG.md --skip.changelog --skip.bump'
     ext.output = {
         return standardOutput.toString()
     }
