--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,3 +37,11 @@ jobs:
         env:
           CURSE_API: ${{ secrets.CURSE_API }}
         run: ./gradlew curseforge
+      - uses: shallwefootball/s3-upload-action@master
+        with:
+          if: "startsWith(github.ref, 'refs/tags/') && !endsWith(github.ref, '-[0-9]+')"
+          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_bucket: ${{ secrets.AWS_BUCKET }}
+          source_dir: 'docs/forgeupdatefile'
+          destination_dir: 'modversions'
