--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,11 +37,10 @@ jobs:
         env:
           CURSE_API: ${{ secrets.CURSE_API }}
         run: ./gradlew curseforge
-      - uses: shallwefootball/s3-upload-action@master
+      - name: Upload Forge Version file
         if: "startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')"
-        with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: 'docs/forgeupdatefile'
-          destination_dir: 'modversions'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: aws s3 cp ./docs/forgeupdatefile s3://${{secrets.AWS_BUCKET}}/modversions/ --recursive
