--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.daemon=false
 
 minecraft_version=1.16.5
 forge_version=36.0.48
-version=1.4.1-0
+version=1.4.0
 
 title=Re:Skin
 archive=ReSkin
