--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,5 +49,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           yarn install --frozen-lockfile
-          npx auto shipit
+          yarn release
 
