chore(ci): Ignoring more build cases

--- a/build.gradle
+++ b/build.gradle
@@ -302,10 +302,11 @@ curseforge {
 
 // https://github.com/researchgate/gradle-release
 release {
+    failOnCommitNeeded = false
+    failOnPublishNeeded = false
     failOnSnapshotDependencies = false
     failOnUnversionedFiles = false
     failOnUpdateNeeded = false
-    failOnCommitNeeded = false
     git {
         requireBranch = 'release/forge-1.16'
     }
