chore(ci): Add logging for Auto to debug issues

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "changelog": "auto changelog",
-    "release": "auto shipit",
+    "release": "auto shipit -vv",
     "next": "auto next"
   }
 }
