--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "1.4.0",
   "devDependencies": {
     "@auto-it/conventional-commits": "^10.29.2",
-    "@auto-it/git-tag": "^10.29.2",
     "@auto-it/gradle": "^10.29.2",
     "@auto-it/released": "^10.29.2",
     "@auto-it/upload-assets": "^10.29.2",
@@ -13,7 +12,7 @@
   },
   "scripts": {
     "changelog": "auto changelog",
-    "release": "auto shipit -vv",
+    "release": "auto shipit",
     "next": "auto next"
   }
 }
