--- a/build.gradle
+++ b/build.gradle
@@ -307,6 +307,7 @@ release {
     failOnSnapshotDependencies = false
     failOnUnversionedFiles = false
     failOnUpdateNeeded = false
+    tagTemplate = "v${version}"
     git {
         requireBranch = 'release/forge-1.16'
     }
