--- a/build.gradle
+++ b/build.gradle
@@ -309,6 +309,6 @@ release {
     failOnUpdateNeeded = false
     tagTemplate = "v${version}"
     git {
-        requireBranch = 'release/forge-1.16'
+        requireBranch = 'release-forge-1.16'
     }
 }
