--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.4.0",
   "devDependencies": {
     "@auto-it/conventional-commits": "^10.29.2",
+    "@auto-it/exec": "^10.29.2",
     "@auto-it/gradle": "^10.29.2",
     "@auto-it/released": "^10.29.2",
     "@auto-it/upload-assets": "^10.29.2",
