--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Build Project
+name: Release
 
 on: [push]
 
@@ -9,41 +9,35 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Prepare repository
-        run: |
-          git fetch --unshallow --tags
-          yarn install --frozen-lockfile
+      - name: Cache Gradle packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+          restore-keys: ${{ runner.os }}-gradle
+      - name: Cache Node packages
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
+          restore-keys: ${{ runner.os }}-node
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
+      - name: Use Node.js 12.x
+        uses: actions/setup-node@v1
         with:
-          path: |
-            ~/.gradle/caches
-            node_modules
-          key: ${{ runner.os }}-gradle2-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-#      - name: Build with Gradle
-#        run: ./gradlew build
-#      - name: Upload to Discord (If pre-release tag)
-#        if: "startsWith(github.ref, 'refs/tags/v') && contains(github.ref, '-')"
-#        env:
-#          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-#        run: ./gradlew discordupload
-#      - name: Publish to Curseforge (If release tag)
-#        if: "startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')"
-#        env:
-#          CURSE_API: ${{ secrets.CURSE_API }}
-#        run: ./gradlew curseforge
-#      - name: Upload Forge Version file
-#        if: "startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')"
-#        env:
-#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          AWS_REGION: ${{ secrets.AWS_REGION }}
-#        run: aws s3 cp ./forgeupdatefile s3://${{secrets.AWS_BUCKET}}/modversions/ --recursive
+          node-version: 12.x
+      - name: Prepare repository
+        run: |
+          git fetch --unshallow --tags
+          yarn install --frozen-lockfile
+          echo $(yarn bin) >> $GITHUB_PATH
+      - name: Build with Gradle
+        run: ./gradlew build
+      - name: Clear build folder(cleans up releases)
+        run: rm -rfv ./build/libs/
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -53,6 +47,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
         run: |
-          yarn install --frozen-lockfile
-          yarn release
+          npx auto shipit -v
 
