--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "Re-Skin",
-  "private": true,
-  "dependencies": {},
-  "version": "1.4.0",
   "devDependencies": {
-    "@auto-it/conventional-commits": "^10.29.2",
-    "@auto-it/exec": "^10.29.2",
-    "@auto-it/gradle": "^10.29.2",
-    "@auto-it/released": "^10.29.2",
-    "@auto-it/upload-assets": "^10.29.2",
-    "auto": "^10.29.2"
-  },
-  "scripts": {
-    "changelog": "auto changelog",
-    "release": "auto shipit -v",
-    "next": "auto next"
+    "@auto-it/conventional-commits": "^10.20.6",
+    "conventional-changelog-angular": "^5.0.12",
+    "@auto-it/exec": "^10.20.6",
+    "@auto-it/first-time-contributor": "^10.20.6",
+    "@auto-it/gradle": "^10.20.6",
+    "@auto-it/released": "^10.20.6",
+    "@auto-it/upload-assets": "^10.20.6",
+    "auto": "^10.20.6"
   }
 }
