--- a/build.gradle
+++ b/build.gradle
@@ -266,7 +266,7 @@ curseforge {
     project {
         id = project.curse_project_id
         // TODO add code to reference this but also cut the latest change logs in for the files
-        changelog = "${project.github}/blob/${sha}/docs/CHANGELOG.md"
+        changelog = "${project.github}/blob/${sha}/CHANGELOG.md"
         changelogType = 'markdown'
         releaseType = 'release'
         addGameVersion '1.16.1'
