--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ apply plugin: "org.spongepowered.mixin"
 apply plugin: "com.wynprice.cursemaven"
 
 def branch = System.getenv("GITHUB_REF")
-def sha = System.getenv("GITHUB_SHA")
+if(branch != null) {
+    branch = branch.replace('refs/heads/', '')
+}
 def isCanary = version.toString().contains('canary')
 
 group = project.package // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -237,7 +239,7 @@ task discordupload {
                 builder.addTextBody("content", "New canary Build")
             } else {
                 builder.addTextBody("content", "New release build\n\n" +
-                        "Current Features: <${project.github}/blob/${sha}/CHANGELOG.md>")
+                        "Current Features: <${project.github}/blob/${branch}/CHANGELOG.md>")
             }
 
             builder.addBinaryBody("file", file(jar.archiveFile).newInputStream(), ContentType.APPLICATION_OCTET_STREAM, jar.archiveName)
@@ -266,7 +268,7 @@ curseforge {
     project {
         id = project.curse_project_id
         // TODO add code to reference this but also cut the latest change logs in for the files
-        changelog = "${project.github}/blob/${sha}/CHANGELOG.md"
+        changelog = "${project.github}/blob/${branch}/CHANGELOG.md"
         changelogType = 'markdown'
         releaseType = 'release'
         addGameVersion '1.16.1'
