--- a/build.gradle
+++ b/build.gradle
@@ -306,6 +306,13 @@ task publish {
 
 }
 
+task cleanbuildfolder {
+    println "Cleaning up previous builds (to stop publishing old ones by mistake)"
+    project.delete(files("${buildDir}/libs"))
+}
+
+build.dependsOn 'cleanbuildfolder'
+
 // Publish rules
 // Current behavior seems to be canary or release. Though pre-releases may break this pattern.
 publish.dependsOn 'build'
